SonarQube 관련 수정
git-svn-id: https://skvalley.com/svn/repos/storeplatform/trunk/sac/storeplatform-sac@110640 01f5c84a-aead-4b29-b0f1-7c54dbeec05f